2017-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag for release of MinGW.org WSL-5.0.1

	* All files (wsl-5.0.1-release): Tag assigned.

2017-07-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Automate testsuite dependency generation.

	* tests/Makefile.in (testsuite) [$srcdir/*.at]: Automatically
	enumerate all such wildcard matches as prerequisites, instead of...
	(headers.at, ansiprintf.at, logarithms.at, powerfunc.at): ...these,
	which were previously enumerated explicitly.

2017-06-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Automatically correct obsolete _XOPEN_SOURCE usage.

	* include/_mingw.h.in (__paste, __valueless): New macros; define them.
	(_XOPEN_SOURCE) [defined with no value]: Use them to attempt to deduce
	this obsolete usage; if detected, redefine it with a default assigned
	value of one, emulating -D_XOPEN_SOURCE command line definition.

2017-05-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix snprintf()/vsnprintf() -Wformat vs. multiple definition issue.

	* include/stdio.h (__mingw_stdio_redirect__): Add reference to...
	(__Wformat): ...this new macro; define it, such that it expands via...
	(__Wformat_mingw_printf, __Wformat_msvcrt_printf): ...these new macros,
	ultimately expanding to an attribute declaration, in terms of...
	(__Wformat_ms_vprintf, __Wformat_ms_vfprintf, __Wformat_ms_vsprintf)
	(__Wformat_ms_printf, __Wformat_ms_fprintf, __Wformat_ms_sprintf):
	...any one of these; they map to an ms_printf attribute, or...
	(__Wformat_vprintf, __Wformat_vfprintf, __Wformat_vsprintf)
	(__Wformat_printf, __Wformat_fprintf, __Wformat_sprintf): ...any one
	of these; they map conditionally to...
	[__GNUC__>=6] (__mingw_printf__): ...this new format attribute, or...
	[__GNUC__< 6]: ...nothing.
	(snprintf, vsnprintf): Revert 2017-01-30 inline definitions; add...
	(__Wformat_snprintf, __Wformat_vsnprintf): ...these attributes; they