@@ -51,13 +51,7 @@
 #include <profile.h>
 
 #ifdef __MINGW32__
-#ifndef _BSDTYPES_DEFINED
-typedef unsigned char u_char;
-typedef unsigned short u_short;
-typedef unsigned int u_int;
-typedef unsigned long u_long;
-#define _BSDTYPES_DEFINED
-#endif /* _BSDTYPES_DEFINED */
+#include <sys/bsdtypes.h>
 #endif /* __MINGW32__*/
 
 /*
