@@ -1,3 +1,15 @@
+2017-09-09  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Factor BSD non-standard type definitions into common header.
+
+	* profile/gmon.h [_BSDTYPES_DEFINED]: Delete block; include...
+	* include/sys/bsdtypes.h: ...this new file instead; it defines...
+	(u_char, u_int, u_long, u_short): ...these non-standard data types.
+
+	* profile/gmon.c profile/mcount.c [_BSD_SOURCE]: Declare it;
+	it suppresses warnings from <sys/bsdtypes.h>, about ill-advised
+	non-standard BSD typedef usage.
+
 2017-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Prepare and tag for release of MinGW.org WSL-5.0.1
